Fixes a style issue with female/male icons in the bookings view on mobile devices

--- a/src/onegov.feriennet/onegov/feriennet/theme/styles/feriennet.scss
+++ b/src/onegov.feriennet/onegov/feriennet/theme/styles/feriennet.scss
@@ -707,6 +707,13 @@ ul.tags {
         position: absolute;
     }
 
+    @media #{$small-only} {
+        .icon-male::before,
+        .icon-female::before {
+            left: 1.5rem;
+        }
+    }
+
     .attendee-bookings {
         .alert-box {
             margin-bottom: 0;
